(fix) apply dark mode style to pagination

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -354,10 +354,10 @@ form {
   @apply flex justify-center items-center;
 
   span {
-    @apply py-1 px-3 text-gray-700;
+    @apply py-1 px-3 text-gray-700 dark:text-gray-200;
 
     &.current {
-      @apply bg-darkerGray text-gray-200 rounded-sm shadow-md;
+      @apply bg-darkerGray text-gray-200 rounded-sm shadow-md dark:bg-gray-300 dark:text-darkerGray;
     }
 
     &.previous,
